- add missing call to 'utilities.get_messages()' in some microblog views - change the color of the post replies to something more visible - don't show the reply button on a post, if there isn't a logged in user - fix, in the search template don't refer to posts as messages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -154,12 +154,12 @@ td, th
 
 #SelectedPost
     {
-    background-color: rgba(74, 154, 157, 0.09);
+    background-color: rgba(74, 154, 157, 0.1);
     }
 
 .replyPost
     {
-    background-color: rgba(240, 248, 255, 0.2);
+    background-color: rgba(150, 42, 255, 0.1);
     }
 
 .postText
